fixed a lot of bugs with the jump/Go button and a bug with how dealing with app when in edited mode instead of edit - previous to firefox 29, didn't need to worry about this because became edited only just before refreshing the page thn instantly became edit again. In Firefox 29, the verify popup window doesn't refresh the page anymore - which is good - and if it had always been that way, edited wouldn't be necessary, but I'm keeping edited mode and now have to deal with places where edited should behave same as edit and not as new or something.

--- a/data/rentap-screen.css
+++ b/data/rentap-screen.css
@@ -21,7 +21,7 @@ label, .section_header {font: 14px serif; display: inline-block; min-width: 78px
 .inline {display: inline-block;}
 .inlineshort {display: inline-block; max-width:80px}
 .inlinebutton {display: inline-block; max-width:60px;}
-#jumpbutton, #idnumber, #rownumber {max-width:40px; position: relative; left: -4px}
+#jumpbutton, #idnumber, #rownumber, #prevbutton, #nextbutton {max-width:40px; position: relative; left: -4px}
 #prevbutton {position: relative; left: -4px}
 .inlinewidebutton {display: inline-block; max-width:120px}
 #findname {width: 250px}
